--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -176,12 +176,92 @@
     <div class="container">
         <h5 class="text-center">DON’T SEE WHAT YOU’RE LOOKING FOR...<br/>CREATE YOUR OWN ADVENTURE!</h5>
         <div class="get-started-box">
-            <p class="text-center">Whatever your budget, whatever your timeline.</p>
+            <div class="get-started-box-header"></div>
+            <div class="get-started-box-body">
+                <p class="text-center">Whatever your budget, whatever your timeline.</p>
+                <form>
+                    <div class="col-md-6">
+                        <div class="form-group row">
 
+                            <div class="col-sm-6">
+                                <input class="form-control " type="text" name="first_name" placeholder="First Name"/>
+                            </div>
+                            <div class="col-sm-6">
+                                <input class="form-control" type="text" name="last_name" placeholder="Last Name"/>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="school_name" placeholder="Your School Name"/>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="email_address" placeholder="Your Email Address"/>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                         <div class="form-group">
+                            <input class="form-control" type="text" name="date" placeholder="Date"/>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" type="text" name="request" placeholder="Your Request"></textarea>
+                        </div>
+                    </div>
+                    <div class="clearfix"></div>
+                    <div class="text-center">
+                        <span class="font-size-14 bold-regular">WELL MAKE YOUR DREAM A REALITY!</span>
+                    </div>
+                    <div class="text-center">
+                        <input type="submit" class="btn btn-submit bold-regular font-size-14" value="GET STARTED">
+                    </div>
+                </form>
+                <div class="clearfix"></div>
+            </div>
         </div>
     </div>
 
 {#    End Get started form#}
+    <hr class="space"/>
+{#    Welcome and sign in#}
+
+    <div class="container">
+        <div class="col-md-6 ">
+            <div class="row">
+                <div class="col-sm-12 box welcome">
+                    <h3>Welcome to Four Winds Tours.</h3>
+                    <p>
+                        We are a full-service educational, student and group tour operator located in Jericho,
+                        NY. Since 1994 we have serviced group travel needs for organizations nationwide including:
+                        schools, non-profits, camps, and other youth organizations.
+                    </p>
+                    <p>
+                        We specialize in student group tours.
+                        Our travel consultants customize trips to any destinationin the United States,
+                        Canada and any international destination of your choice.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div class="row">
+                <div class="col-sm-12 box sign-in">
+                    <h3>Share Your Adventure</h3>
+                    <form>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="username" placeholder="Username">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="password" name="password" placeholder="Password">
+                        </div>
+                        <br/>
+                        <div class="form-group">
+                            <input class="btn btn-submit" type="submit" value="SIGN IN"/>
+                        </div>
+
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+{#    End Welcome and sign in#}
 </div>
 {% endblock %}
 {% block scripts %}
