- organizing templates in order to optimize creation of other pages

--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -1,5 +1,6 @@
 {% extends 'bootstrap3/bootstrap3.html' %}
 {% load static %}
+{% load page_tags %}
 
 {% block bootstrap3_extra_head %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
@@ -9,246 +10,17 @@
 
 {% block bootstrap3_content %}
 <div id="page">
-    <div class="text-center" id="top-bar">
-        <span>SPECIALIZING IN PRIVATE CUSTOM STUDENT TOURS FOR OVER TWO DECADES</span>
-        |
-        <span>CALL FOR A CUSTOM QUOTE (800) 896-3858</span>
-        |
-        <span>
-            <a href="#">
-                <img src="{% static 'img/top-bar/icon-search.png' %}" alt="search"/>
-            </a>
-        </span>
-    </div>
-    <div class="text-center" id="top-banner">
-        <img src="{% static 'img/banner/banner-logo.png' %}" alt="FourWinds Logo">
-    </div>
-    <div id="top-navbar">
-        <nav class="navbar " >
-            <div class="container">
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav" >
-                <li>
-                    <a href="#">
-                        HOME
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        OUR STORY
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        TRAVEL
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        SAFETY &amp; INSURANCE
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        REQUEST A QUOTE
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        SHARE YOUR ADVENTURE
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        BLOG
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        CONTACT US
-                    </a>
-                </li>
-            </ul>
-                </div>
-            </div>
-        </nav>
-    </div>
+
+    {% render_topheader %}
+
+    {% render_topnavbar %}
+
     <div class="bottom-bg">
         {% block content %}{% endblock %}
-    {#    Testimonials#}
-            <div class="text-center testimonials">
-                <h3 class="font-size-14 bold-regular">
-                    SEE WHAT OUR GUESTS HAVE TO SAY...
-                </h3>
-                <div class="box">
-                    <div id="testimonials-carousel" class="container carousel" data-ride="carousel">
-                        <div class="carousel-inner" role="listbox">
-                            <div class="item testimonial active">
-                                <p>
-                                    <img src="{% static 'img/testimonial/quote.png' %}" alt="" class="quote">
-                                    My students absolutely loved experiencing Les Miserables on Broadway and
-                                    the amazing Broadway Classroom workshop we attended.
-                                    They learned so much and are already looking forward to another trip.
-                                </p>
-                                <p class="autor">
-                                    - Joanna Kufs, Moravia High School,
-                                        New York City trip with Broadway workshop, May 2014
-                                </p>
-                            </div>
-                        </div>
-                        <!-- Controls -->
-                          <a class="left carousel-control" href="#testimonials-carousel" role="button" data-slide="prev">
-                            <span class="icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="right carousel-control" href="#testimonials-carousel" role="button" data-slide="next">
-                            <span class="icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                          </a>
-                    </div>
-                    <a class="btn btn-submit">
-                        MORE TESTIMONIALS
-                    </a>
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <br/>
-            <br/>
-        </div>
-    {#  End Testimonials#}
     </div>
-{#  Footer#}
-    <div id="footer">
 
-        <div class="text-center affiliates">
-            <p class="title">
-                <span>OUR AFFILIATES</span>
-            </p>
-            <img src="{% static 'img/footer/footer-affiliates.png' %}" alt="affiliates">
-        </div>
-        <div id="menu-footer" class="text-center">
+    {% render_footer %}
 
-                <ul class="nav navbar-nav" >
-                    <li>
-                        <a href="#">
-                            HOME
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            OUR STORY
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            TRAVEL
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            SAFETY &amp; INSURANCE
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            REQUEST A QUOTE
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            SHARE YOUR ADVENTURE
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            CAREERS
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            BLOG
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            CONTACT US
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav policies">
-                    <li>
-                        <a href="#">
-                            Disclaimer and Payment Schedule
-                        </a>
-                    </li>
-                    <li>
-                        <a>|</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Airline Disclaimer and Payment Schedule
-                        </a>
-                    </li>
-                    <li>
-                        <a>|</a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            Privacy Policy
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav social">
-                    <li>
-                        <a href="#">
-                            <span class="facebook"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="instagram"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="twitter"></span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <span class="pinterest"></span>
-                        </a>
-                    </li>
-                </ul>
-            <div class="clearfix"></div>
-        </div>
-        <div id="contact-info" class="text-center">
-            <div>
-                <span class="title">NEW YORK</span>
-                <address>
-                    30 Jericho Executive Plaza, Suite 500E<br/>Jericho, NY 11753<br/>
-                    <span>direct <b>516.334.2400</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>800.896.3858</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;fax <b>516.334.2466</b></span>
-                </address>
-
-            </div>
-            <div>
-                <span class="title">CALIFORNIA</span>
-                <address>
-                    1010 Tourmaline Street<br/>San Diego, CA 92109<br/>
-                    <span>direct <b>858.900.3526</b>&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;toll-free <b>888.933.3422</b></span>
-                </address>
-
-            </div>
-            <div>
-                <address>
-                    &copy; 2016 Four Winds International Tours & Travel. All Rights Reserved.<br/>
-website by: andreafoglia.com
-                </address>
-
-            </div>
-        </div>
-    </div>
-{#  End  Footer#}
 </div>
 {% endblock %}
 {% block bootstrap3_extra_script %} {% block scripts %} {% endblock %} {% endblock %}
