--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,7 @@
 {% extends 'home/base.html' %}
 {% block title %}FourWinds{% endblock %}
 {% load static %}
+{% load page_tags %}
 {% block content %}
 <div class="clearfix"></div>
 <div id="home">
@@ -31,244 +32,16 @@
     </div>
 {#    End main carousel#}
 
-{#    Widgets#}
-    <div id="widget-venue-categories">
-        <div class="text-center" id="widget-venues-control">
-            <a href="#" class="left">
-                <span class="icon"></span>
-            </a>
-            <span >SELECT YOUR DOMESTIC OR INTERNATIONAL VENUE OF INTEREST</span>
-            <a href="#" class="right">
-                <span class="icon"></span>
-            </a>
-        </div>
-       <div class="jcarousel">
-            <ul class="jcarousel-list">
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-environment"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>CLEAN UP WITH</small><br/>
-                                ENVIRONMENTAL<br/>
-                                STUDIES
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-art"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>HONE YOUR CRAFT WITH A</small><br/>
-                                FINE ARTS<br/>
-                                <small>EXPERIENCE</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
+    {% render_widgets %}
 
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-science"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>DISCOVERY</small><br/>
-                                SCIENCE FAIRS<br/>
-                                <small>ABROAD OR DOMESTICALLY</small><br/>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-language"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>GET STARTED WITH YOUR</small><br/>
-                                FOREIGN LANGUAGE<br/>
-                                <small>ADVENTURE</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-music"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>COMPOSE YOUR NEXT</small><br/>
-                                MUSIC<br/>
-                                <small>MASTERPIECE</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-history"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>JOURNEY TO THE PAST ON A</small><br/>
-                                HISTORIC<br/>
-                                <small>EXPEDITION</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-honors"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>SHOWCASE YOUR</small><br/>
-                                HONOR SOCIETY<br/>
-                                <small>ELITE</small><br/>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </div>
-{#    End Widgets#}
     <hr class="space">
-{#    Get started form#}
-    <div class="container">
-        <h5 class="text-center">DON’T SEE WHAT YOU’RE LOOKING FOR...<br/>CREATE YOUR OWN ADVENTURE!</h5>
-        <div class="get-started-box">
-            <div class="get-started-box-header"></div>
-            <div class="get-started-box-body">
-                <p class="text-center">Whatever your budget, whatever your timeline.</p>
-                <form>
-                    <div class="col-md-6">
-                        <div class="form-group row">
 
-                            <div class="col-sm-6">
-                                <input class="form-control " type="text" name="first_name" placeholder="First Name"/>
-                            </div>
-                            <div class="col-sm-6">
-                                <input class="form-control" type="text" name="last_name" placeholder="Last Name"/>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="school_name" placeholder="Your School Name"/>
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="email_address" placeholder="Your Email Address"/>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                         <div class="form-group">
-                            <input class="form-control" type="text" name="date" placeholder="Date"/>
-                        </div>
-                        <div class="form-group">
-                            <textarea class="form-control" type="text" name="request" placeholder="Your Request"></textarea>
-                        </div>
-                    </div>
-                    <div class="clearfix"></div>
-                    <div class="text-center">
-                        <span class="font-size-14 bold-regular">WELL MAKE YOUR DREAM A REALITY!</span>
-                    </div>
-                    <div class="text-center">
-                        <input type="submit" class="btn btn-submit bold-regular font-size-14" value="GET STARTED">
-                    </div>
-                </form>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-    </div>
+    {% render_get_started_form %}
 
-{#    End Get started form#}
     <hr class="space"/>
-{#    Welcome and sign in#}
 
-    <div class="container">
-        <div class="col-md-6 ">
-            <div class="row">
-                <div class="col-sm-12 box welcome">
-                    <h3>Welcome to Four Winds Tours.</h3>
-                    <p>
-                        We are a full-service educational, student and group tour operator located in Jericho,
-                        NY. Since 1994 we have serviced group travel needs for organizations nationwide including:
-                        schools, non-profits, camps, and other youth organizations.
-                    </p>
-                    <p>
-                        We specialize in student group tours.
-                        Our travel consultants customize trips to any destinationin the United States,
-                        Canada and any international destination of your choice.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-6">
-            <div class="row">
-                <div class="col-sm-12 box sign-in">
-                    <h3>Share Your Adventure</h3>
-                    <form>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="username" placeholder="Username">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="password" name="password" placeholder="Password">
-                        </div>
-                        <br/>
-                        <div class="form-group">
-                            <input class="btn btn-submit" type="submit" value="SIGN IN"/>
-                        </div>
+    {% render_welcome_signin_form %}
 
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
-{#    End Welcome and sign in#}
+    {% render_testimonials %}
 </div>
 {% endblock %}
-{% block scripts %}
-<script src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
-<script type="text/javascript">
-$(document).ready(function() {
-    $('.jcarousel').jcarousel();
-});
-</script>
-{%  endblock %}
