--- a/website/templates/website/index.html
+++ b/website/templates/website/index.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% extends 'website/base.html' %}
 {% block title %}FourWinds{% endblock %}
 {% load static %}
 {% load page_tags %}
