--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -5,7 +5,7 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav" >
                 <li>
-                    <a href="#">
+                    <a href="{% url 'index' %}">
                         HOME
                     </a>
                 </li>
@@ -20,7 +20,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'safety_insurance' %}">
                         SAFETY &amp; INSURANCE
                     </a>
                 </li>
