- adding safety page

--- a/website/templates/footer.html
+++ b/website/templates/footer.html
@@ -12,7 +12,7 @@
 
                 <ul class="nav navbar-nav" >
                     <li>
-                        <a href="#">
+                        <a href="{% url 'index' %}">
                             HOME
                         </a>
                     </li>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{% url 'safety_insurance' %}">
                             SAFETY &amp; INSURANCE
                         </a>
                     </li>
