--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'request_quote' %}">
                         REQUEST A QUOTE
                     </a>
                 </li>
