- adding request a quote page

--- a/website/templates/website/request_quote.html
+++ b/website/templates/website/request_quote.html
@@ -127,21 +127,21 @@
                     <div class="form-group ">
                         <input class="form-control" type="text" name="pref_airport" placeholder="Preferred Airport"/>
                     </div>
-                    <div>
+                    <div class="row">
                         <div class="col-sm-2">
                             Meals to include
                         </div>
-                        <div class="checkbox">
+                        <div class=" col-sm-3">
                             <label>
                               <input type="checkbox" name="meals[breakfast]"> Breakfast
                             </label>
                         </div>
-                        <div class="checkbox">
+                        <div class="col-sm-3">
                             <label>
                               <input type="checkbox" name="meals[lunch]"> Lunch
                             </label>
                         </div>
-                        <div class="checkbox">
+                        <div class="col-sm-3">
                             <label>
                               <input type="checkbox" name="meals[dinner]"> Dinner
                             </label>
