--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -15,7 +15,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'travel' %}">
                         TRAVEL
                     </a>
                 </li>
