--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -40,7 +40,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'contact-us' %}">
                         CONTACT US
                     </a>
                 </li>
