--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -10,7 +10,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'our_story' %}">
                         OUR STORY
                     </a>
                 </li>
