--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -23,5 +23,23 @@
 
 </div>
 {% endblock %}
-{% block bootstrap3_extra_script %} {% block scripts %} {% endblock %} {% endblock %}
+{% block bootstrap3_extra_script %}
+
+    {% block scripts %} {% endblock %}
+    <script src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
+
+    <script src="{% static 'js/jquery.bootstrap-dropdown-hover.min.js' %}"></script>
+
+    <script type="text/javascript">
+    $(document).ready(function(){
+        $('.jcarousel').jcarousel();
+        $('#top-navbar [data-toggle="dropdown"]').bootstrapDropdownHover({
+          // see next for specifications
+        });
+    });
+
+    </script>
+
+
+{% endblock %}
 
