--- a/website/templates/testimonials.html
+++ b/website/templates/testimonials.html
@@ -36,7 +36,7 @@
                             <span class="sr-only">Next</span>
                           </a>
                     </div>
-                    <a class="btn btn-submit">
+                    <a class="btn btn-submit" href="{% url 'testimonials' %}">
                         MORE TESTIMONIALS
                     </a>
                 </div>
