--- a/website/templates/top_navbar.html
+++ b/website/templates/top_navbar.html
@@ -19,10 +19,10 @@
                         role="button" aria-haspopup="true" aria-expanded="false">
                         TRAVEL <span class="caret"></span>
                     </a>
-                    <ul class="dropdown-menu">
-                        {% for cat in categories %}
-                        <li><a href="#">{{ cat }}</a></li>
-                        {% endfor %}
+                    <ul class="dropdown-menu" id="travel-menu">
+                        <li>
+
+                        </li>
                     </ul>
                 </li>
                 <li>
