--- a/website/templates/testimonials.html
+++ b/website/templates/testimonials.html
@@ -13,6 +13,8 @@
                                 <p>
                                     <img src="{% static 'img/testimonial/quote.png' %}" alt="" class="quote">
                                     {{ row.text }}
+                                    <img
+                        src="{% static 'img/testimonial/quote-close.png' %}" alt="" class="quote quote-close">
                                 </p>
                                 <p class="autor">
                                     - {{ row.full_name }}, {{ row.organization }},
