--- a/website/templates/website/testimonials.html
+++ b/website/templates/website/testimonials.html
@@ -12,8 +12,9 @@
             {%  for row in data %}
             <div class="item testimonial {%  if forloop.counter == 1 %} active {% endif %}">
                 <p>
-                    <img src="{% static 'img/testimonial/quote.png' %}" alt="" class="quote">
-                    {{ row.text }}
+                    <img src="{% static 'img/testimonial/quote.png' %}" alt=""
+                         class="quote">{{ row.text }}<img
+                        src="{% static 'img/testimonial/quote-close.png' %}" alt="" class="quote quote-close">
                 </p>
                 <p class="autor">
                     - {{ row.full_name }}, {{ row.organization }},
