--- a/website/templates/website/travel.html
+++ b/website/templates/website/travel.html
@@ -8,94 +8,60 @@
 {#        Carousel#}
         <div class="jcarousel">
             <ul class="jcarousel-list">
-                <li>
+                {% for trip in trips %}
+                <li class="jcarousel-item">
                     <div class="event-back" style="display: none">
-                        Description
-                    </div>
-                    <div class="event-front">
-                        <img src="{% static 'img/travel/travel_slider-image1.jpg' %}"/>
-                    </div>
-                </li>
-                <li>
-                    <div class="event-back" style="display: none">
-                        <h4>Senior Class Road Trip</h4>
-                        <p>Four Winds Tours & Travel was established in 1994 for the purpose of creating a
-                            memorable experience for students and other groups while ensuring their safety and
-                            well-being.</p>
-
-                        <p>Each trip is packed with fun and excitement to any destination of your choosing!
-                            For over a decade, we continue to specialize in tours for High Schools,
-                            Middle and Elementary Schools, as well as Camps, Youth Organizations, Adult Groups, etc.
-                            We also customize trips for each department and fit the group’s unique needs,
-                            such as performance planning, clinics, workshops, Behind the Scene tours, Space Camp,
-                            exclusive events, special meals, handicap accessibility, and any other requests.</p>
-
-                        <p>With just one phone call or click to Four Winds, you can be rest assured that our
-                            team will provide quality service, a wide variety of travel options,
-                            a safe trip environment, and unforgettable experiences while working within your budget
-                            and needs.</p>
-                        <a href="#" class="btn ">
+                        <h4>{{ trip.title }}</h4>
+                        <p>{{ trip.description }}</p>
+                        <a href="{% url 'trip' trip.id %}" class="btn ">
                             LEARN MORE &#10095;&#10095;
                         </a>
                     </div>
                     <div class="event-front">
-                        <img src="{% static 'img/travel/travel_slider-image2.jpg' %}"/>
+                        <img src="/media/{{ trip.photos.0.photo }}" alt="{{ trip.title }}" width="540"/>
                     </div>
                 </li>
-                <li>
-                    <div class="event-back" style="display: none">
-                        Description
-                    </div>
-                    <div class="event-front">
-                        <img src="{% static 'img/travel/travel_slider-image3.jpg' %}"/>
-                    </div>
-                </li>
-                <li>
-                    <div class="event-back" style="display: none">
-                        Description
-                    </div>
-                    <div class="event-front">
-                        <img src="{% static 'img/travel/travel_slider-image4.jpg' %}"/>
-                    </div>
-                </li>
+                {% endfor %}
             </ul>
+            <a class="left carousel-control" href="javascript:jcarousel_move(true);" role="button" data-slide="prev">
+                <span class="icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="javascript:jcarousel_move(false);" role="button" data-slide="next">
+                <span class="icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
 {#        End Carousel#}
         <div class="events container">
             <h3 class="pull-left">UPCOMING EVENTS</h3>
             <div class="form-group pull-right col-sm-3">
-                <select class="form-control">
-                    <option>November, 2017</option>
+                <select class="form-control" onchange="javascript:filter_events(event)">
+                    <option value="0">All</option>
+                    {% for row in months %}
+                    <option value="{{ row.year_month }}"
+                    {% if year_month == row.year_month %}
+                        selected
+                    {% endif %}
+                    >{{ row.date }}</option>
+                    {% endfor %}
                 </select>
             </div>
             <div class="clearfix"></div>
             <div class="events-list">
+                {% for event in events %}
                 <div class="event col-md-6">
                     <div class="row">
-                        <h4 class="event-title">Music in the Park</h4>
+                        <h4 class="event-title">{{ event.title }}</h4>
                         <div class="event-content">
-                            <p>Four Winds Tours & Travel was established in 1994 for the purpose of creating a memorable experience for students and other groups while ensuring their safety and well-being.</p>
-                            <p>Each trip is packed with fun and excitement to any destination of your choosing! For over a decade, we continue to specialize in tours for High Schools, Middle and Elementary Schools, as well as Camps, Youth Organizations, Adult Groups, etc. We also customize trips for each department and fit the group’s unique needs, such as performance planning, clinics, workshops, Behind the Scene tours, Space Camp, exclusive events, special meals, handicap accessibility, and any other requests.</p>
-                            <p>With just one phone call or click to Four Winds, you can be rest assured that our team will provide quality service, a wide variety of travel options, a safe trip environment, and unforgettable experiences while working within your budget and needs.</p>
+                            <p>{{ event.description }}</p>
                         </div>
-                        <a href="#" class="btn btn-learn-more">
+                        <a href="{% url 'event' event.id %}" class="btn btn-learn-more">
                             LEARN MORE &#10095;&#10095;
                         </a>
                     </div>
                 </div>
-                <div class="event col-md-6">
-                    <div class="row">
-                        <h4 class="event-title">New York City Science Fair </h4>
-                        <div class="event-content">
-                            <p>Four Winds Tours & Travel was established in 1994 for the purpose of creating a memorable experience for students and other groups while ensuring their safety and well-being.</p>
-                            <p>Each trip is packed with fun and excitement to any destination of your choosing! For over a decade, we continue to specialize in tours for High Schools, Middle and Elementary Schools, as well as Camps, Youth Organizations, Adult Groups, etc. We also customize trips for each department and fit the group’s unique needs, such as performance planning, clinics, workshops, Behind the Scene tours, Space Camp, exclusive events, special meals, handicap accessibility, and any other requests.</p>
-
-                        </div>
-                        <a href="#" class="btn btn-learn-more">
-                            LEARN MORE &#10095;&#10095;
-                        </a>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
 
@@ -110,6 +76,10 @@
 {% block scripts %}
 <script src="{% static 'js/jquery.jcarousel.min.js' %}"></script>
 <script type="text/javascript">
+function filter_events(e){
+    var val = $(e.currentTarget).val()
+    window.location.href = '{% url 'travel' %}'+val
+};
 $(document).ready(function() {
     $('.jcarousel').jcarousel();
     $('.jcarousel li').mousemove(function(){
