--- a/website/templates/widgets.html
+++ b/website/templates/widgets.html
@@ -1,140 +1,34 @@
 {% load static %}
 {#    Widgets#}
-    <div id="widget-venue-categories">
+    <div id="widget-venue-categories jcarousel-wrapper">
         <div class="text-center" id="widget-venues-control">
-            <a href="#" class="left">
+            <a href="javascript:jcarousel_move(true);" class="left jcarousel-control-prev" data-jcarouselcontrol="true">
                 <span class="icon"></span>
             </a>
             <span >SELECT YOUR DOMESTIC OR INTERNATIONAL VENUE OF INTEREST</span>
-            <a href="#" class="right">
+            <a href="javascript:jcarousel_move(false);" class="right jcarousel-control-next" data-jcarouselcontrol="true">
                 <span class="icon"></span>
             </a>
         </div>
        <div class="jcarousel">
             <ul class="jcarousel-list">
-                <li>
+                {% for cat in categories %}
+                <li class="jcarousel-item">
                     <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-environment"></div>
+                        <div class="widget-venue-header" style="background: url('/media/{{ cat.widget_top_bg }}') top no-repeat"></div>
                         <div class="widget-venue-body">
                             <p>
-                                <small>CLEAN UP WITH</small><br/>
-                                ENVIRONMENTAL<br/>
-                                STUDIES
+                                {{ cat.caption | safe}}
                             </p>
                         </div>
                         <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
+                            <a href="{% url 'category_travels' cat.id %}" class="btn-learn-more text-center">
                                 LEARN MORE
                             </a>
                         </div>
                     </div>
                 </li>
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-art"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>HONE YOUR CRAFT WITH A</small><br/>
-                                FINE ARTS<br/>
-                                <small>EXPERIENCE</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-science"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>DISCOVERY</small><br/>
-                                SCIENCE FAIRS<br/>
-                                <small>ABROAD OR DOMESTICALLY</small><br/>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-language"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>GET STARTED WITH YOUR</small><br/>
-                                FOREIGN LANGUAGE<br/>
-                                <small>ADVENTURE</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-music"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>COMPOSE YOUR NEXT</small><br/>
-                                MUSIC<br/>
-                                <small>MASTERPIECE</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-history"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>JOURNEY TO THE PAST ON A</small><br/>
-                                HISTORIC<br/>
-                                <small>EXPEDITION</small>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="widget-venue">
-                        <div class="widget-venue-header widget-venue-honors"></div>
-                        <div class="widget-venue-body">
-                            <p>
-                                <small>SHOWCASE YOUR</small><br/>
-                                HONOR SOCIETY<br/>
-                                <small>ELITE</small><br/>
-                            </p>
-                        </div>
-                        <div class="widget-venue-footer text-center">
-                            <a href="#" class="btn-learn-more text-center">
-                                LEARN MORE
-                            </a>
-                        </div>
-                    </div>
-                </li>
+                {% endfor %}
             </ul>
         </div>
     </div>
