adding some different categories

--- a/website/templates/website/request_quote.html
+++ b/website/templates/website/request_quote.html
@@ -47,8 +47,10 @@
                         <div class="form-group">
                             <select class="form-control" name="trip_type">
                                 <option>Type of Trip</option>
-                                <option value="vacations">Vacations</option>
-                                <option value="business">Business</option>
+                                <option value="music">Music</option>
+                                <option value="seniortrip">Senior Class</option>
+                                <option value="foreignlanguage">Foreign Language</option>
+                                <option value="other">Other</option>
                             </select>
                         </div>
                         <div class="form-group">
