- adding validation to the forms 30min

--- a/website/templates/website/base.html
+++ b/website/templates/website/base.html
@@ -52,6 +52,13 @@
         $("#travel-menu li").load("{% url 'travel_info' %}");
     });
     </script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+    <script type="text/javascript">
+        $.validate({
+            modules : 'sanitize'
+        });
+    </script>
+
 
 
 
