--- a/website/templates/website/event.html
+++ b/website/templates/website/event.html
@@ -23,7 +23,7 @@
       <div class="carousel-inner" role="listbox">
           {% for photo in event.photos %}
             <div class="item {% if forloop.first %} active {% endif %}">
-              <img src="/media/{{ photo.photo }}" alt="{{ trip.title }}" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'">
+              <img src="{% get_media_prefix %}{{ photo.photo }}" alt="{{ trip.title }}" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'">
             </div>
           {% endfor %}
       </div>
