--- a/website/templates/website/travel.html
+++ b/website/templates/website/travel.html
@@ -18,7 +18,7 @@
                         </a>
                     </div>
                     <div class="event-front">
-                        <img src="/media/{{ trip.photos.0.photo }}" alt="{{ trip.title }}" width="540" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'"/>
+                        <img src="{% get_media_prefix %}{{ trip.photos.0.photo }}" alt="{{ trip.title }}" width="540" onerror="this.src='{% static 'img/no-image-featured-image.png' %}'"/>
                     </div>
                 </li>
                 {% endfor %}
